# Gen-AI-Consultant-Chatbot

./: .dockerignore  .env.sample  Dockerfile  README.md  compose.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt
StreamlitUI/: streamlitUI.py
app/: main.py
app/api/: chain.py  use_case_agent.py
app/api/core/: logger.py
app/api/services/: web_loader_tool.py
app/api/v1/Research_ends/: chain.py  history_runnable.py  retriever_tool.py  template_1.py  web_loader_tool.py
app/api/v1/endpoints/: chain.py  use_case_agent.py
app/data/: data_injestion.py
app/data/faiss_index/: index.faiss  index.pkl
data/data_injestion/: chroma.sqlite3
data/data_injestion/chroma_db/: chroma.sqlite3
gen-ui/: index.html  package-lock.json  package.json  tailwind.config.js
gen-ui/src/: App.jsx  api.jsx  main.jsx
gen-ui/src/components/: ChatContainer.jsx  MessageBubble.jsx  MessageInput.jsx
scripts/: data_injestion.py
