[tool.poetry]
name = "use-case-gen-2"
version = "0.1.0"
description = ""
authors = ["VishalPachpande <vishalpachpande831@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9.0"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
altair = "5.3.0"
annotated-types = "0.7.0"
anyio = "4.4.0"
asgiref = "3.8.1"
attrs = "23.2.0"
backoff = "2.2.1"
bcrypt = "4.1.3"
beautifulsoup4 = "4.12.3"
blinker = "1.8.2"
build = "1.2.1"
cachetools = "5.3.3"
certifi = "2024.6.2"
cffi = "1.16.0"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
chroma-hnswlib = "0.7.3"
chromadb = "0.5.2"
click = "8.1.7"
colorama = "0.4.6"
coloredlogs = "15.0.1"
contourpy = "1.2.1"
cryptography = "42.0.8"
cycler = "0.12.1"
dataclasses-json = "0.6.7"
deepdiff = "7.0.1"
deprecated = "1.2.14"
dnspython = "2.6.1"
duckduckgo-search = "6.1.6"
email-validator = "2.1.2"
emoji = "2.12.1"
faiss-cpu = "1.8.0"
fastapi = "0.110.3"
fastapi-cli = "0.0.4"
filelock = "3.15.1"
filetype = "1.2.0"
flatbuffers = "24.3.25"
fonttools = "4.53.0"
frozenlist = "1.4.1"
fsspec = "2024.6.0"
gitdb = "4.0.11"
gitpython = "3.1.43"
google-ai-generativelanguage = "0.6.4"
google-api-core = "2.19.0"
google-api-python-client = "2.133.0"
google-auth = "2.30.0"
google-auth-httplib2 = "0.2.0"
google-generativeai = "0.5.4"
googleapis-common-protos = "1.63.1"
greenlet = "3.0.3"
grpcio = "1.64.1"
grpcio-status = "1.62.2"
h11 = "0.14.0"
httpcore = "1.0.5"
httplib2 = "0.22.0"
httptools = "0.6.1"
httpx = "0.27.0"
huggingface-hub = "0.23.4"
humanfriendly = "10.0"
idna = "3.7"
importlib-metadata = "7.1.0"
importlib-resources = "6.4.0"
intel-openmp = "2021.4.0"
iopath = "0.1.10"
jinja2 = "3.1.4"
joblib = "1.4.2"
jsonpatch = "1.33"
jsonpath-python = "1.0.6"
jsonpointer = "3.0.0"
jsonschema = "4.22.0"
jsonschema-specifications = "2023.12.1"
kiwisolver = "1.4.5"
kubernetes = "30.1.0"
langchain = "0.2.5"
langchain-chroma = "0.1.1"
langchain-community = "0.2.5"
langchain-core = "0.2.8"
langchain-google-genai = "1.0.6"
langchain-text-splitters = "0.2.1"
langdetect = "1.0.9"
langsmith = "0.1.80"
layoutparser = "0.3.4"
libcst = "1.4.0"
lxml = "5.2.2"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
marshmallow = "3.21.3"
matplotlib = "3.9.0"
mdurl = "0.1.2"
mkl = "2021.4.0"
mmh3 = "4.1.0"
monotonic = "1.6"
mpmath = "1.3.0"
multidict = "6.0.5"
mypy-extensions = "1.0.0"
nest-asyncio = "1.6.0"
networkx = "<3.13"
nltk = "3.8.1"
numpy = "1.26.4"
oauthlib = "3.2.2"
onnx = "1.16.1"
onnxruntime = "1.18.0"
opencv-python = "4.10.0.84"
opentelemetry-api = "1.25.0"
opentelemetry-exporter-otlp-proto-common = "1.25.0"
opentelemetry-exporter-otlp-proto-grpc = "1.25.0"
opentelemetry-instrumentation = "0.46b0"
opentelemetry-instrumentation-asgi = "0.46b0"
opentelemetry-instrumentation-fastapi = "0.46b0"
opentelemetry-proto = "1.25.0"
opentelemetry-sdk = "1.25.0"
opentelemetry-semantic-conventions = "0.46b0"
opentelemetry-util-http = "0.46b0"
ordered-set = "4.1.0"
orjson = "3.10.5"
overrides = "7.7.0"
packaging = "24.1"
pandas = "2.2.2"
pdf2image = "1.17.0"
pdfminer = "20191125"
pdfminer-six = "20231228"
pdfplumber = "0.11.1"
pillow = "10.3.0"
pillow-heif = "0.16.0"
pip-tools = "7.4.1"
portalocker = "2.8.2"
posthog = "3.5.0"
proto-plus = "1.23.0"
protobuf = "4.25.3"
pyarrow = "16.1.0"
pyasn1 = "0.6.0"
pyasn1-modules = "0.4.0"
pycparser = "2.22"
pycryptodome = "3.20.0"
pydantic = "2.7.4"
pydantic-core = "2.18.4"
pydeck = "0.9.1"
pygments = "2.18.0"
pyparsing = "3.1.2"
pypdf = "4.2.0"
pypdfium2 = "4.30.0"
pypika = "0.48.9"
pyproject-toml = "0.0.10"
pyproject-hooks = "1.1.0"
pyreadline3 = "3.4.1"
pyreqwest-impersonate = "0.4.8"
pytesseract = "0.3.10"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-iso639 = "2024.4.27"
python-magic = "0.4.27"
python-multipart = "0.0.9"
pytz = "2024.1"
pyyaml = "6.0.1"
rapidfuzz = "3.9.3"
redis = "5.0.6"
referencing = "0.35.1"
regex = "2024.5.15"
requests = "2.32.3"
requests-oauthlib = "2.0.0"
requests-toolbelt = "1.0.0"
rich = "13.7.1"
rpds-py = "0.18.1"
rsa = "4.9"
safetensors = "0.4.3"
scipy = "1.13.1"
setuptools = "70.0.0"
shellingham = "1.5.4"
six = "1.16.0"
smmap = "5.0.1"
sniffio = "1.3.1"
soupsieve = "2.5"
sqlalchemy = "2.0.30"
sse-starlette = "1.8.2"
starlette = "0.37.2"
sympy = "1.12.1"
tabulate = "0.9.0"
tbb = "2021.12.0"
tenacity = "8.4.1"
timm = "1.0.3"
tokenizers = "0.19.1"
toml = "0.10.2"
tomlkit = "0.12.5"
toolz = "0.12.1"
torch = "2.3.1"
torchvision = "0.18.1"
tornado = "6.4.1"
tqdm = "4.66.4"
transformers = "4.41.2"
typer = ">=0.9.0"
typing-inspect = "0.9.0"
typing-extensions = "4.12.2"
tzdata = "2024.1"
ujson = "5.10.0"
uritemplate = "4.1.1"
urllib3 = "2.2.2"
uvicorn = "0.23.2"
watchdog = "4.0.1"
watchfiles = "0.22.0"
websocket-client = "1.8.0"
websockets = "12.0"
wheel = "0.43.0"
wikipedia = "1.4.0"
wrapt = "1.16.0"
yarl = "1.9.4"
zipp = "3.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
